# Reach

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE.md  AUTH_FLOW.md  RELEASE_NOTES.md  SECURITY.md  VALIDATION.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apps.rs  backup.rs  connections.rs  credentials.rs  db.rs  lib.rs  main.rs  settings.rs  ssh.rs  tabs.rs
src-tauri/windows/: installer.nsi  main.wxs
src/components/: AddToTabDialog.tsx  AllView.tsx  AppsView.tsx  CredentialPicker.tsx  CustomTabView.tsx  EditAppDialog.tsx  EditConnectionDialog.tsx  EditSSHDialog.tsx  IconColorPicker.tsx  RDPView.tsx  ReachLogo.tsx  ResourceCard.tsx  ResourceGrid.tsx  ResourceListItem.tsx  SSHView.tsx  SettingsDialog.tsx  SettingsView.tsx  Sidebar.tsx  TabIcon.tsx  TabIconPicker.tsx  TabsManagerDialog.tsx  Topbar.tsx  UnifiedAddDialog.tsx
src/components/ui/: button.tsx  dialog.tsx  input.tsx  select.tsx
src/contexts/: UIContext.tsx
src/lib/: icon-registry.ts  theme.ts
src/types/: index.ts
