[package]
name = "reach"
version = "1.1.0"
description = "A desktop launcher for RDP, SSH, local apps, and RD Web feeds"
authors = ["LoserLabs"]
license = "MIT"
repository = "https://github.com/giftedloser/Reach"
homepage = "https://github.com/giftedloser/Reach"
edition = "2021"
default-run = "reach"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reach_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2.6.0"
